<?xml version="1.0"?>
<package>
  <name>ros_precaster_laser2d</name>
  <version>0.1.0</version>
  <description>Precaster laser2D ROS driver</description>

  <maintainer email="alex@erlerobotics.com">Alejandro Hernandez</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/beginner_tutorials</url>

  <author email="alex@erlerobotics.com">Alejandro Hernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
